# FasterBitset

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: global.cmake  options.cmake
cmake/lib/: compiler.cmake
src/: CMakeLists.txt  bitset.base.hh  bitset.concept.hh  bitset.cstyle.hh
test/benchmark/: .clang-tidy
test/ut/: CMakeLists.txt
